--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "input-converter",
   "version": "0.1.0",
+  "homepage": "http://converter.blockplay.io",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "hex2dec": "^1.1.2",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
   },
